--- a/bg.html
+++ b/bg.html
@@ -49,6 +49,17 @@
 		top: 800px;
 	}
 </style> -->
+<style type="text/css">
+	.roate{
+		width: 400px;
+		height: 400px;
+		z-index: 10;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+
+	}
+</style>
 </head>
 <body>
 	<div class="bg-contain">
@@ -61,7 +72,12 @@
 		<img src="img/bg7.png" alt="" class="bg bg7"> -->
 	</div>
 
-
+	<div class="roate">
+		alpha<span></span><br/>
+		beta<span></span><br/>
+		gamma<span></span><br/>
+		结果：<span></span>
+	</div>
 	<script type="text/javascript" src='JQ1.9.1.js'></script>
 	<script type="text/javascript" src='bg.js'></script>
 
