--- a/bg.html
+++ b/bg.html
@@ -73,7 +73,7 @@
 	</div>
 
 	<div class="roate">
-		alpha<span></span><br/>
+		结果：<span></span><br/>
 		beta<span></span><br/>
 		gamma<span></span><br/>
 		结果：<span></span>
