--- a/bg.html
+++ b/bg.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>BG</title>
 <!-- 	<style>
 	.bg-contain{
@@ -61,15 +62,15 @@
 	}
 </style>
 </head>
-<body>
-	<div class="bg-contain">
-		<!-- <img src="img/bg1.png" alt="" class="bg bg1">
+<body><!-- <img src="img/bg1.png" alt="" class="bg bg1">
 		<img src="img/bg2.png" alt="" class="bg bg2">
 		<img src="img/bg3.png" alt="" class="bg bg3">
 		<img src="img/bg4.png" alt="" class="bg bg4">
 		<img src="img/bg5.png" alt="" class="bg bg5">
 		<img src="img/bg6.png" alt="" class="bg bg6">
 		<img src="img/bg7.png" alt="" class="bg bg7"> -->
+	<div class="bg-contain">
+		
 	</div>
 
 	<div class="roate">
